# HiNet

./: .gitignore  HiNet.ipynb  HiNet_Colab.ipynb  README.md  evaluate.py  main.py  pyproject.toml
legacy/: README.md
scripts/: BatchHiNet-Full-Training-2000.sh  BatchHiNet-Noise-50-95-LR-1e-5-FromScratch.sh  BatchHiNet-Noise-50-95-LR-2e-6-Resume2000.sh  BatchHiNet-Noise-Decopuled-70-95-LR-1e-6-1e-4-200.sh  HiNet_Colab.ipynb  download_div2k.sh
src/core/: device.py
src/data/: pipeline.py
src/engine/: trainer.py
src/models/: cbam.py  dense_block.py  dwt.py  hinet.py  hinet_decoupled.py  inv_block.py  noise_layer.py  reveal_net.py
